Исправление недочетов